--- a/api/build.gradle
+++ b/api/build.gradle
@@ -33,12 +33,15 @@ dependencies {
     implementation("org.grails.plugins:hibernate5")
     implementation("org.grails.plugins:views-json")
     implementation("org.grails.plugins:views-json-templates")
+    implementation("org.grails.plugins:mail:3.0.0")
     implementation("org.springframework.boot:spring-boot-autoconfigure")
     implementation("org.springframework.boot:spring-boot-starter")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-logging")
     implementation("org.springframework.boot:spring-boot-starter-tomcat")
     implementation("org.springframework.boot:spring-boot-starter-validation")
+    implementation('org.springframework.security:spring-security-core:5.5.3')
+    implementation('org.springframework.security:spring-security-crypto:5.7.11')
     compileOnly("io.micronaut:micronaut-inject-groovy")
     console("org.grails:grails-console")
     runtimeOnly("org.apache.tomcat:tomcat-jdbc")
